# mcce

./: .gitignore  README.md  alarm4200.py  day_digest.py  day_loop.py  pyproject.toml  requirements.txt  year_drop.py
.github/: dependabot.yml
requirements/: requirements.in  requirements.txt
systemd/: mcce-digest.service_example  mcce-digest.timer_example  mcce-drop.service_example  mcce-drop.timer_example  mcce-mcce.service_example
templates/: mcce-digest.service.j2  mcce-digest.timer.j2  mcce-drop.service.j2  mcce-mcce.service.j2
