[tool.poetry]
name        = "mcce"
version     = "0.0.0"
description = "Monitor Collect power Consumptions servicE"
license     = "GPL-3.0-only"
authors     = ["andros21 <andrea.ros21@e.email>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
psycopg2 = "^2.9.3"
numpy = "^1.23.2"
pandas = "^1.4.3"
pyserial = "^3.5"
sqlalchemy = "^1.4.39"
"rpi.gpio" = "^0.7.1"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name    = "piwheels"
url     = "https://www.piwheels.org/simple/"
default = true

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
