[tool.poetry]
name = "mcce"
version = "0.0.0"
description = "Monitor Collect power Consumptions servicE"
license = "GPL-3.0-only"
authors = ["andros21 <andrea.ros21@e.email>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
psycopg2 = "^2.9.9"
numpy = "^1.26.3"
pandas = "^2.2.0"
pyserial = "^3.5"
sqlalchemy = "^2.0.25"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
priority = "default"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
